# tuxtype

./: .gitignore  AUTHORS  ChangeLog  ChangeLog~  Doxyfile  INSTALL  INSTALL-Win32  Info.plist  Install_Instructions.md  Makefile  Makefile.am  Makefile.am~  Makefile.dist  Makefile.in  Makefile.in~  README  README-CROSSBUILD.txt  README.Win32  TODO  TuxType_x86.proj  Tuxtype2.NSI  acinclude.m4  aclocal.m4  autogen.sh  autorun.inf  config.cache  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  configure.in  cross-configure.sh  cross-make.sh  globals.h  google_tts.sh  laser.c  libtool  (+16 more)
data/: Makefile.am  Makefile.in  keyboard.lst  lessonData.xml  phrases.txt
data/braille/: Makefile.am  english.txt  espanol.txt  hindi.txt  kannada.txt  malayalam.txt  numerical.txt  spanish.txt  tamil.txt
data/fonts/: Makefile  Makefile.am  Makefile.am~  Makefile.in
data/im/: Makefile.am  Makefile.in
data/images/: Makefile  Makefile.am  Makefile.in  README_IMAGES.TXT
data/images/backgrounds/: Makefile.am  Makefile.in
data/images/braille_hands/: Makefile.am
data/images/cities/: Makefile.am  Makefile.in
data/images/comets/: Makefile.am  Makefile.in
data/images/hands/: Makefile.am  Makefile.in
data/images/icons/: Makefile.am  Makefile.in  tuxtype.hqx  tuxtype.icns  tuxtype.xpm
data/images/keyboard/: Makefile.am  Makefile.am~  Makefile.in  Makefile.in~  keyboard-us.eps  keyboard.eps
data/images/menu/: Makefile.am  Makefile.in
data/images/sprites/: Makefile.am
data/images/status/: Makefile.am  Makefile.in
data/images/title/: Makefile.am
data/images/tux/: Makefile.am  Makefile.in
data/menus/: Makefile.am  main_menu.xml  menu_strings  update-po.sh
data/scripts/: 00_Scripting_Sample.xml  Lesson_1.xml  Makefile.am  Makefile.in  basic_lesson_01.xml  basic_lesson_02.xml  basic_lesson_03.xml  basic_lesson_04.xml  basic_lesson_05.xml  basic_lesson_06.xml  basic_lesson_07.xml  basic_lesson_08.xml  basic_lesson_09.xml  basic_lesson_10.xml  basic_lesson_11.xml  basic_lesson_12.xml  basic_lesson_13.xml  basic_lesson_14.xml  basic_lesson_15.xml  basic_lesson_16.xml  basic_lesson_17.xml  basic_lesson_18.xml  basic_lesson_19.xml  basic_lesson_20.xml  basic_lesson_21.xml  basic_lesson_22.xml  basic_lesson_23.xml  basic_lesson_24.xml  basic_lesson_25.xml  basic_lesson_26.xml  basic_lesson_27.xml  basic_lesson_28.xml  basic_lesson_29.xml  basic_lesson_30.xml  basic_lesson_31.xml  basic_lesson_32.xml  basic_lesson_33.xml  basic_lesson_34.xml  basic_lesson_35.xml  basic_lesson_36.xml  (+12 more)
data/scripts_braille/: Makefile.am  basic_lesson_01.xml  basic_lesson_02.xml  basic_lesson_03.xml  basic_lesson_04.xml  basic_lesson_05.xml  basic_lesson_06.xml  basic_lesson_07.xml  basic_lesson_08.xml  basic_lesson_09.xml  basic_lesson_10.xml  basic_lesson_11.xml  basic_lesson_12.xml  sed-linux.sh
data/sounds/: Makefile.am  Makefile.in  README_SOUNDS.TXT  game.mod  game2.mod  game3.mod
data/themes/: Makefile.am  Makefile.in  lang.po
data/themes/armenian/: Makefile.am  Makefile.in  keyboard.lst  settings.txt
data/themes/assamese/: Makefile  Makefile.am  Makefile.in  alphabet.txt  keyboard.lst  settings.txt  settings.txt~
data/themes/asturian/: Makefile.am  keyboard.lst  settings.txt
data/themes/belarussian/: Makefile.am  keyboard.lst  settings.txt
data/themes/bengali/: Makefile  Makefile.am  Makefile.in  alphabet.txt  phrases.txt  settings.txt
data/themes/bokmal/: Makefile.am  Makefile.in  keyboard.lst  settings.txt
data/themes/brazilian-portuguese/: AUTHOR  Makefile.am  Makefile.in  keyboard.lst  lang.po  settings.txt
data/themes/bulgarian/: Makefile.am  Makefile.in  settings.txt
data/themes/catalan/: Makefile.am  Makefile.in  keyboard.lst  lang.po
data/themes/czech/: Makefile.am  Makefile.in  keyboard.lst  lang.po  settings.txt
data/themes/dansk/: Makefile.am  Makefile.in  keyboard.lst  lang.po  settings.txt
data/themes/deutsch/: Makefile.am  Makefile.in  README.md  keyboard.lst  lang.po  settings.txt
data/themes/eesti/: Makefile.am  keyboard.lst  settings.txt
data/themes/espanol/: Makefile.am  Makefile.in  keyboard.lst  lang.po  settings.txt
data/themes/euskara/: AUTHOR  Makefile.am  Makefile.in  lang.po
data/themes/french/: Makefile.am  Makefile.in  lang.po  settings.txt
data/themes/greek/: Makefile.am  Makefile.in  keyboard.lst  lang.po  phrases.txt  settings.txt
data/themes/gujarati/: Makefile  Makefile.am  Makefile.in  alphabet.txt  keyboard.lst  settings.txt
data/themes/hebrew/: Makefile.am  keyboard.lst  settings.txt
data/themes/hindi/: Makefile  Makefile.am  (+3 more)
data/words/: Makefile.am  Makefile.in  alphabet.txt  animals.txt  astronomy.txt  colors.txt  elements.txt  fingers.txt  fruit.txt  geography.txt  lessonData.xml  numbers.txt  plants.txt  shapes.txt  trees.txt  words1.txt  words2.txt  words3.txt  wpm.txt
src/: Makefile.am  Makefile.in  SDL_extras.c  SDL_extras.h  alphabet.c  audio.c  braille.c  braille.h  compiler.h  convert_utf.c  convert_utf.h  editor.c  editor.h  funcs.h  gettext.c  gettext.h  globals.c  globals.h  highscores.c  input_methods.c  input_methods.h  laser.c  laser.h  loaders.c  main.c  manage_xmlLesson.c  manage_xmlLesson.h  menu.c  menu.h  mysetenv.c  mysetenv.h  options.c  pause.c  pixels.c  pixels.h  playgame.c  playgame.h  practice.c  scandir.c  scandir.h  (+11 more)
tuxtype/: .cvsignore  Makefile  Makefile.am  Makefile.in  Makefile.ja  alphabet.c  audio.c  funcs.h  gettext.c  globals.h  graphics.c  graphics.h  laser.c  laser.h  loaders.c  main.c  pause.c  phrases.txt  playgame.c  playgame.h  practice.c  scripting.c  setup.c  snow.c  theme.c  titlescreen.c  titlescreen.h
tuxtype/.deps/: SDL_Plus.P  file.P  file.pp  graphics.P  main.P  playgame.P
tuxtype/data/: Makefile  Makefile.am  Makefile.in  keyboard.lst  phrases.txt  words1.txt  words2.txt  words3.txt  words4.txt
tuxtype/docs/: Makefile  Makefile.am  Makefile.in
tuxtype/images/: Makefile  Makefile.am  Makefile.in  README_IMAGES.TXT
tuxtype/sounds/: Makefile  Makefile.am  Makefile.in
tuxtype/templates/: cpp_template  header_template
(+1352 files in other folders)
